--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
   <div id="home-search" class="home">
      <script>
          (function() {
-             var cx = '[Your CSE Search ID]';
+             var cx = '000255894927805493779:ck272_dsxaw';
              var gcse = document.createElement('script');
              gcse.type = 'text/javascript';
              gcse.async = true;
