--- a/index.html
+++ b/index.html
@@ -24,13 +24,7 @@
               </form>
           </div>
         <div id="archives">
-              browse by <a title="The complete archive of violetblue's Blog by category"
-                     href="http://violetblue.githb.io/categoryview">category</a>
-              or <a title="The complete archive of {{ site.name }}'s Blog by month"
-                    href="http://violetblue.githb.io/monthview">date</a>
-          </div>
-   </div>
-      <div class="inner">
+      <!--<div class="inner">-->
 
         <header>
           <h1>violetblue</h1>
@@ -58,5 +52,6 @@
 
       </div>
     </div>
+   </div>
   </body>
 </html>
