--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
  <div class="grid" id="searchBar">
       <div>
           <div id="search">
-              <form role="search" method="get" action="http://violetblue.githb.io/search/">
+              <form role="search" method="get" action="http://violetblue.github.io/search.html">
                   <input id="searchString" name="searchString"
-                         placeholder="Learn Ionic, Be a Better Developer, etc." type="text">
+                         placeholder="Search..." type="text">
                   <input id="searchButton" name="googleSearchName" type="button" value="Search">
               </form>
           </div>
