--- a/search.html
+++ b/search.html
@@ -1,9 +1,3 @@
----
- layout: page
- title: Search
- permalink: /search/
- sitemap: false
- ---
   <div id="home-search" class="home">
      <script>
          (function() {
@@ -19,3 +13,7 @@
      </script>
      <gcse:search queryParameterName="searchString"></gcse:search>
  </div>
+<div style="border: 1px solid red;">
+    Area 2 (for example main area of the page)
+    <gcse:searchresults></gcse:searchresults>
+</div>
