--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <form role="search" method="get" action="http://violetblue.github.io/search.html">
                   <input id="searchString" name="searchString"
                          placeholder="Search..." type="text">
-                  <input id="searchButton" name="googleSearchName" type="button" value="Search">
+                  <input id="searchButton" name="Violetblue.github.io" type="button" value="Search">
               </form>
           </div>
         <div id="archives">
