--- a/search.html
+++ b/search.html
@@ -11,5 +11,5 @@
              s.parentNode.insertBefore(gcse, s);
          })();
      </script>
-     <gcse:search></gcse:search>
+     <gcse:search queryParameterName="searchString"></gcse:search>
  </div>
